<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AC3B3B"
    tools:context=".SandwichActivity">

    <ImageView
        android:id="@+id/sandwichViewIcon"
        android:layout_width="287dp"
        android:layout_height="245dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        app:srcCompat="@drawable/sandwichicon" />

    <CheckBox
        android:id="@+id/tomato"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:buttonTint="#FFFFFF"
        android:text="@string/tomato"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <RadioGroup
        android:id="@+id/breadRadio"
        android:layout_width="140dp"
        android:layout_height="142dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.332"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444">

        <RadioButton
            android:id="@+id/bagel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:buttonTint="#FFFFFF"
            android:checked="true"
            android:text="@string/bagel"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/wheatToast"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:buttonTint="#FFFFFF"
            android:text="@string/wheat_toast"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/sourDough"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:buttonTint="#FFFFFF"
            android:text="@string/sour_dough"
            android:textColor="#FFFFFF" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/lettuce"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:buttonTint="#FFFFFF"
        android:text="@string/lettuce"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <CheckBox
        android:id="@+id/cheese"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:buttonTint="#FFFFFF"
        android:text="@string/cheese"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696" />

    <CheckBox
        android:id="@+id/onion"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:buttonTint="#FFFFFF"
        android:text="@string/onion"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696" />

    <RadioGroup
        android:id="@+id/proteinRadio"
        android:layout_width="140dp"
        android:layout_height="142dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437">

        <RadioButton
            android:id="@+id/beef"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:buttonTint="#FFFFFF"
            android:checked="true"
            android:text="@string/beef"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/fish"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:buttonTint="#FFFFFF"
            android:text="@string/fish"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/chicken"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:buttonTint="#FFFFFF"
            android:text="@string/chicken"
            android:textColor="#FFFFFF" />

    </RadioGroup>

    <TextView
        android:id="@+id/sandwichTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <TextView
        android:id="@+id/sandwichNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <Button
        android:id="@+id/addToOrderSandwich"
        android:layout_width="250dp"
        android:layout_height="94dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#50B127"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

</androidx.constraintlayout.widget.ConstraintLayout>